# libparodus

./: .sonar-project.properties  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
examples/hello-parodus/: .travis.yml  README.md
examples/hello-parodus-event/: CMakeLists.txt  README.md
examples/hello-parodus-event/src/: CMakeLists.txt
examples/hello-parodus-request-response/: README.md
examples/hello-parodus-request-response/src/: hello-parodus.c
examples/hello-parodus/src/: hello-parodus.c
examples/notify-stress/: CMakeLists.txt
examples/notify-stress/src/: CMakeLists.txt  notify-stress.c
examples/req-resp-multi-threads/: CMakeLists.txt  README.md
examples/req-resp-multi-threads/src/: CMakeLists.txt  parodus-req-resp-multi.c
parodusNotifier/: CMakeLists.txt  main.c  notifier_log.h  parodus_notifier.c  parodus_notifier.h
patches/: btcp.patch
src/: CMakeLists.txt  libparodus.c  libparodus.h  libparodus_log.c  libparodus_log.h  libparodus_private.h  libparodus_queues.c  libparodus_queues.h  libparodus_test_timing.h  libparodus_time.c  libparodus_time.h
tests/: CMakeLists.txt  dbg_err.c  dbg_err.h  libparodus_test_timing.c  libpd_test.c  mock_parodus.c  nmsg.c
tests/tcp/: err.c  err.h  tcp.c  testutil.h
